--- a/index.css
+++ b/index.css
@@ -1,23 +1,113 @@
-.nav{
-	background-color: #2C3031;
-	width: 100%;
-	height:80px;
-	list-style-type: none;
-    padding: 0;
-    overflow: hidden;
-    position: relative;
-    top: 0;
+
+
+* {
+    box-sizing: border-box;
 }
 
-body{
-	margin: 0;
+body {
+  margin: 0;
+}
+
+.topnav {
+    overflow: hidden;
+    background-color: #2C3031;
+    height:80px;
+}
+
+
+.topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    text-decoration: none;
+}
+
+.column {
+    float: left;
+   
+}
+
+.column.side {
+    width: 23.6%;
+    margin-left: 15px;
+    
+
+}
+
+
+.column.middle {
+    width: 50%;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+@media screen and (max-width: 600px) {
+    .column.side, .column.middle {
+        width: 100%;
+    }
 }
 
 .border{
-	background-color: #477B9C;
-	height: 3px;
+	background-color: #477B9C; 
 	width: 100%;
+	height: 3px;
+}
 
+.vesti-levo{
+	width: 65.47%;
+    float: left;
+    padding-left: 17.5px;
+}
 
+.banner-right{
+	width: 30%;
+    float: left;
+    padding: 0 17px 0 17px;
+}
+
+.lagunabg{
+	height: 330px;
+	padding-left: 17.5px;
+}
+
+a{
+color: #fff;
+font-size: 36px;
+line-height: 40px;
+text-shadow: 2px 2px 1px rgba(0,0,0,0.9);
+text-decoration-line: none;
+}
+
+.naslov{
+	margin-left: 30px;
+	height: 150px;
+	width: 615px;
+}
+
+.comments{
+	background-image: url("comments-number.png");
+	height: 42px;
+    width: 42px;
+    position: absolute;
+    right: 800px;
+}
+
+.text{
+	padding: 0px 15px;
+	font-size: 5px;
+}
+
+.comms{
+	font-size: 15px;
+}
+
+.reklama{
+
+}
 
 
