--- a/index.css
+++ b/index.css
@@ -1,50 +1,12 @@
-
-
 * {
     box-sizing: border-box;
 }
 
 body {
   margin: 0;
+  line-height: 1.5;
 }
 
-.topnav {
-    overflow: hidden;
-    background-color: #2C3031;
-    height:80px;
-}
-
-
-.topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    text-decoration: none;
-}
-
-.column {
-    float: left;
-   
-}
-
-.column.side {
-    width: 23.6%;
-    margin-left: 15px;
-    
-
-}
-
-
-.column.middle {
-    width: 50%;
-}
-
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
 
 @media screen and (max-width: 600px) {
     .column.side, .column.middle {
@@ -52,62 +14,616 @@ body {
     }
 }
 
-.border{
-	background-color: #477B9C; 
-	width: 100%;
-	height: 3px;
+.bdesno{
+right: 50%;
+margin-right: -942px;
+position: fixed;
+top: 0px;
+text-align: left;
+width: 457px;
+overflow: hidden;
 }
 
-.vesti-levo{
-	width: 65.47%;
-    float: left;
-    padding-left: 17.5px;
-}
-
-.banner-right{
-	width: 30%;
-    float: left;
-    padding: 0 17px 0 17px;
-}
-
-.lagunabg{
-	height: 330px;
-	padding-left: 17.5px;
+.desnobg{
+border: 0;
+font-family: inherit;
+font-size: 100%;
+font-style: inherit;
+font-weight: inherit;
+margin: 0;
+outline: 0;
+padding: 0;
+vertical-align: baseline;
+box-sizing: border-box;
+-moz-box-sizing: border-box;
 }
 
 a{
+color: #000;
+font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+font-size: 15px;
+line-height: 1.5;
+text-decoration: none;
+}
+
+a ,img{
+	border: 0;
+}
+
+img{
+	height: auto;
+	max-width: 100%;
+}
+
+.blevo{
+left: 50%;
+margin-left: -936px;
+position: fixed;
+top: 0px;
+text-align: left;
+width: 457px;
+overflow: hidden;
+}
+
+.levobg{
+border: 0;
+font-family: inherit;
+font-size: 100%;
+font-style: inherit;
+font-weight: inherit;
+margin: 0;
+outline: 0;
+padding: 0;
+vertical-align: baseline;
+box-sizing: border-box;
+-moz-box-sizing: border-box;
+}
+
+.primary{
+border: 0;
+font-family: inherit;
+font-size: 100%;
+font-style: inherit;
+font-weight: inherit;
+margin: 0;
+outline: 0;
+padding: 0;
+vertical-align: baseline;
+box-sizing: border-box;
+-moz-box-sizing: border-box;
+}
+
+.banner-top{
+width: 970px;
+line-height: 0;
+margin: 0px auto;
+}
+
+.g{
+margin: 0px;
+padding: 0px;
+overflow: hidden;
+line-height: 1;
+zoom: 1;
+}
+
+.g-single{
+border: 0;
+font-family: inherit;
+font-size: 100%;
+font-style: inherit;
+font-weight: inherit;
+margin: 0;
+outline: 0;
+padding: 0;
+vertical-align: baseline;
+box-sizing: border-box;
+-moz-box-sizing: border-box;
+}
+
+.gofollow{
+border: 0;
+font-family: inherit;
+font-size: 100%;
+font-style: inherit;
+font-weight: inherit;
+margin: 0;
+outline: 0;
+padding: 0;
+vertical-align: baseline;
+box-sizing: border-box;
+-moz-box-sizing: border-box;
+}
+
+.site-content{
+width: 970px;
+margin: 0px auto;
+background: #fff;
+padding: 17.5px 0 17.5px 0;
+}
+
+.vesti-left{
+width: 65.47%;
+float: left;
+padding-left: 17.5px;
+}
+
+.amain{
+width: 100%;
+height: 330px;
+float: none;
+padding: 0;
+}
+
+.image{
+background-image: url(spartak.jpg);
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center center;
+width: 607.55px;
+height: 345px;
+}
+
+.text{
+height: 369px;
+width: 607.55px;
+position: absolute;
+top: 180px;
+padding: 15px;
+background: linear-gradient(4deg, rgba(12,10,19,0.8) 10%, rgba(12,10,19,0.45) 35%, rgba(0,0,0,0.1) 55%, transparent 75%);
+}
+
+.naslov{
+margin-top: 240px;
+border: 0;
+font-family: inherit;
+font-size: 100%;
+font-style: inherit;
+font-weight: inherit;
+outline: 0;
+padding: 0;
+vertical-align: baseline;
+box-sizing: border-box;
+-moz-box-sizing: border-box;
+
+}
+
+.comments-number{
+	background-image: url(comments-number.png);
+height: 42px;
+width: 42px;
+position: absolute;
+top: 500px;
+right: 820px;
+}
+
+.anaslov{
 color: #fff;
 font-size: 36px;
 line-height: 40px;
 text-shadow: 2px 2px 1px rgba(0,0,0,0.9);
-text-decoration-line: none;
 }
 
-.naslov{
-	margin-left: 30px;
-	height: 150px;
-	width: 615px;
+.number{
+position: absolute;
+left: 40%;
+top: 20%;
+font-family: "Calibri", "Arial", "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
+font-size: 15px;
+color: #fff;
+}
+
+.a1{
+width: 33.23%;
+float: left;
+padding: 10px 10px 0 0;
+position: relative;
+display: block;
+top: 20px;
+
+}
+
+.imagea1{
+background-image: url(izbori.jpg);
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center center;
+height: 134px;
+position: relative;
+}
+
+.a1comments-number{
+	background-image: url(comments-number.png);
+height: 42px;
+width: 42px;
+position: absolute;
+top: 100px;
+right: 15px;
+}
+
+.a1text{
+border: 0;
+font-family: inherit;
+font-size: 100%;
+font-style: inherit;
+font-weight: inherit;
+margin: 0;
+outline: 0;
+padding: 0;
+vertical-align: baseline;
+box-sizing: border-box;
+-moz-box-sizing: border-box;
+}
+
+.a1naslov{
+border: 0;
+font-family: inherit;
+font-size: 100%;
+font-style: inherit;
+font-weight: inherit;
+margin: 0;
+outline: 0;
+padding: 0;
+vertical-align: baseline;
+box-sizing: border-box;
+-moz-box-sizing: border-box;
+}
+
+.a2{
+width: 33.23%;
+float: left;
+padding: 10px 10px 0 0;
+position: relative;
+display: block;
+top: 20px;
+}
+
+.a2image{
+background-image: url(hitna.jpg);
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center center;
+height: 134px;
+position: relative;
+}
+
+.a2comments-number{
+	background-image: url(comments-number.png);
+height: 42px;
+width: 42px;
+position: absolute;
+top: 100px;
+right: 15px;
+}
+
+.a2text{
+border: 0;
+font-family: inherit;
+font-size: 100%;
+font-style: inherit;
+font-weight: inherit;
+margin: 0;
+outline: 0;
+padding: 0;
+vertical-align: baseline;
+box-sizing: border-box;
+-moz-box-sizing: border-box;
+}
+
+.a2naslov{
+border: 0;
+font-family: inherit;
+font-size: 100%;
+font-style: inherit;
+font-weight: inherit;
+margin: 0;
+outline: 0;
+padding: 0;
+vertical-align: baseline;
+box-sizing: border-box;
+-moz-box-sizing: border-box;
+}
+
+.a3{
+width: 33.50%;
+float: left;
+padding: 10px 10px 0 0;
+position: relative;
+display: block;
+top: 20px;
+}
+
+.a3image{
+background-image: url(policajac.jpg);
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center center;
+height: 134px;
+position: relative;
+}
+
+.a3comments-number{
+	background-image: url(comments-number.png);
+height: 42px;
+width: 42px;
+position: absolute;
+top: 100px;
+right: 15px;
+}
+
+.a3text{
+border: 0;
+font-family: inherit;
+font-size: 100%;
+font-style: inherit;
+font-weight: inherit;
+margin: 0;
+outline: 0;
+padding: 0;
+vertical-align: baseline;
+box-sizing: border-box;
+-moz-box-sizing: border-box;
+}
+
+.a3naslov{
+border: 0;
+font-family: inherit;
+font-size: 100%;
+font-style: inherit;
+font-weight: inherit;
+margin: 0;
+outline: 0;
+padding: 0;
+vertical-align: baseline;
+box-sizing: border-box;
+-moz-box-sizing: border-box;
+}
+
+.banner-right{
+width: 34.53%;
+float: left;
+padding: 0 17px 0 17px;
+border: 0;
+font-family: inherit;
+font-size: 100%;
+font-style: inherit;
+font-weight: inherit;
+margin: 0;
+outline: 0;
+padding: 0;
+vertical-align: baseline;
+box-sizing: border-box;
+-moz-box-sizing: border-box;
+overflow: hidden;
+
+}
+
+.banner-right1{
+border: 0;
+font-family: inherit;
+font-size: 100%;
+font-style: inherit;
+font-weight: inherit;
+margin: 0;
+outline: 0;
+padding: 0;
+vertical-align: baseline;
+box-sizing: border-box;
+-moz-box-sizing: border-box;
+font-size: 12px;
+color: #ccc;
+text-align: center;
+}
+
+.g3{
+margin: 0px;
+padding: 0px;
+overflow: hidden;
+line-height: 1;
+zoom: 1;
+}  
+
+.g3single{
+border: 0;
+font-family: inherit;
+font-size: 100%;
+font-style: inherit;
+font-weight: inherit;
+margin: 0;
+outline: 0;
+padding: 0;
+vertical-align: baseline;
+box-sizing: border-box;
+-moz-box-sizing: border-box;
+}  
+
+.lagunaimg{
+height: auto;
+max-width: 100%;
+}
+
+p{
+	margin-bottom: 1em;
+}
+
+h2{
+font-size: 22px;
+font-weight: bold;
+margin-bottom: 15px;
+clear: both;
+}
+
+ul{
+border: 0;
+font-family: inherit;
+font-size: 100%;
+font-style: inherit;
+font-weight: inherit;
+margin: 0;
+outline: 0;
+padding: 0;
+vertical-align: baseline;
+box-sizing: border-box;
+-moz-box-sizing: border-box;
+list-style: none;
+}
+
+li{
+border: 0;
+font-family: inherit;
+font-size: 100%;
+font-style: inherit;
+font-weight: inherit;
+margin: 0;
+outline: 0;
+padding: 0;
+vertical-align: baseline;
+box-sizing: border-box;
+-moz-box-sizing: border-box;
 }
 
 .comments{
-	background-image: url("comments-number.png");
-	height: 42px;
-    width: 42px;
-    position: absolute;
-    right: 800px;
+padding: 0 3px 0 3px;
+border: 0;
+font-family: inherit;
+font-size: 100%;
+font-style: inherit;
+font-weight: inherit;
+margin: 0;
+outline: 0;
+padding: 0;
+vertical-align: baseline;
+box-sizing: border-box;
+-moz-box-sizing: border-box;
+width: 95%;
 }
 
-.text{
-	padding: 0px 15px;
-	font-size: 5px;
+hr{
+background-color: #ccc;
+border: 0;
+height: 1px;
+margin-bottom: 1.5em;
 }
 
-.comms{
-	font-size: 15px;
+.comments hr{
+margin-top: 0em;
+margin-bottom: 0em;
 }
 
-.reklama{
+.clear{
+	clear: both;
+}
+
+.site-content-event{
+width: 970px;
+background: #fff;
+margin: 0px auto;
+}
+
+.banner-budapes{
+border: 0;
+font-family: inherit;
+font-size: 100%;
+font-style: inherit;
+font-weight: inherit;
+margin: 0;
+outline: 0;
+padding: 0;
+vertical-align: baseline;
+box-sizing: border-box;
+-moz-box-sizing: border-box;
+}
+.div-event{
+padding: 10px 0 10px 17.5px;
+font-family: "Chaparral Pro", Georgia, serif;
+font-style: italic;
+font-size: 18px;
 
 }
 
+.event-content{
+width: 65.46%;
+float: left;
+}
 
+.event1-image{
+background-image: url(sprovod-1.jpg);
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center center;
+z-index: 3;
+}
+
+.gradient{
+height: 200px;
+background: linear-gradient(4deg, rgba(12,10,19,0.8) 0%, rgba(12,10,19,0.45) 25%, rgba(0,0,0,0.1) 45%, transparent 55%);
+}
+
+.event-venue{
+height: 30px;
+background-color: #bbb;
+color: #fff;
+padding: 5px 20px 5px 20px;
+position: relative;
+top: 10px;
+}
+
+.date{
+color: #9d9d9d;
+background-color: #000;
+height: 30px;
+padding: 5px 20px 5px 20px;
+position: absolute;
+top: 1075px;
+left: 490px;
+}
+
+.time{
+color: #fff;
+font-size: 24px;
+margin-left: 20px;
+position: absolute;
+top: 1110px;
+left: 490px;
+text-shadow: 2px 1px 1px rgba(0,0,0,0.9);
+}
+
+.event-name{
+color: #fff;
+font-weight: bold;
+font-size: 24px;
+margin-left: 20px;
+position: absolute;
+top: 1120px;
+left: 490px;
+text-shadow: 2px 1px 1px rgba(0,0,0,0.9);
+line-height: 1.2em;
+}
+
+.e1{
+width: 50%;
+height: 220px;
+float: left;
+padding: 0 0 17.5px 17.5px;
+box-sizing: border-box;
+-moz-box-sizing: border-box;
+
+}
+
+.event2-image{
+background-image: url(e2.jpg);
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center center;
+z-index: 3;
+width: 300px;
+}
+
+.e2{
+width: 50%;
+height: 220px;
+float: left;
+padding: 0 0 17.5px 17.5px;
+box-sizing: border-box;
+-moz-box-sizing: border-box;
+}
